[package]
name = "sfs_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["staticlib"]
#name = "sfs_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = '*'
bit-vec = '*'
#downcast-rs = '*'
lazy_static = '*'
syscalls = { version = "0.3", default-features = false }
rocksdb = '*'
nix = '0.23.0'
serde = { version = "1.0.104", features = ["derive"] }
bindgen = '*'
