[package]
name = "sfs_rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-sys = "0.1.0"
libc = "0.2.104"
errno = "0.2.8"
rand = "0.8.5"
sfs_global = {"path" = "../sfs_global"}
portpicker = "0.1.1"