[package]
name = "sfs_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = '*'
#downcast-rs = '*'
lazy_static = '*'
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.17", features = ["full"] }
# tarpc = { version = "0.27", features = ["full"] }
prost = "0.9.0"
tonic = { version = "0.6.2", features = ["tls"]}
futures = '*'
sfs_lib_server = { path = "sfs_lib_server" }
sfs_global = {path = "../sfs_global"}
sfs_rpc = {path = "../sfs_rpc"}
tokio-stream = "0.1.8"