[package]
name = "sfs_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = '*'
lazy_static = '*'
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.17", features = ["full"] }
prost = "0.9.0"
grpcio = "0.10.1"
futures = "0.3.21"
sfs_global = {path = "../sfs_global"}
sfs_rpc = {path = "../sfs_rpc"}
sfs_rdma = {path = "../sfs_rdma"}
tokio-stream = "0.1.8"
flexbuffers = "2.0.0"
rdma-sys = "0.1.0"

rocksdb = '*'
nix = '0.23.0'
regex = '*'