[package]
name = "sfs_lib_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["staticlib"]
#name = "sfs_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = '*'
#downcast-rs = '*'
lazy_static = '*'
rocksdb = '*'
nix = '0.23.0'
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"
bindgen = '*'
regex = '*'
rand = '0.8.5'
sha2 = '0.10.2'
tokio = { version = "1.17", features = ["full"] }
tarpc = { version = "0.27", features = ["full"] }
futures = '*'